# llvm-ptr-track

./: .gitignore  CMakeLists.txt  README.md  instrument_ir.cpp  main.cpp  purge_stores.cpp  struct_filter.cpp  struct_filter.h  test.sh  util.cpp  util.h
tests/: test.sh
tests/c-src/: anon_struct.c  call_declared.c  const_objects.c  generic_ptr_write.c  global_array.c  nested_declare.c  nested_ptr.c  nested_structs.c  obj_flow.c  ret_values.c
